<resources>
    <string name="app_name">CftBin</string>
    
    <string name="hint_bin">Enter the first digits of a card number (BIN/IIN)</string>

    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="brand">BRAND</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="type">TYPE</string>
    <string name="prepaid">PREPAID</string>
    <string name="country">COUNTRY</string>
    <string name="latitude_longitude">(latitude: %1$s, \n longitude: %2$s) </string>
    <string name="bank">BANK</string>
    
    <string-array name="card_bins">
        <item>4276</item>
        <item>427626</item>
        <item>42762600</item>
        <item>52762600</item>
    </string-array>
</resources>