<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_bin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/tv_bin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:maxLength="16"
            android:hint="@string/hint_bin"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/b_load_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_bin"
        android:layout_marginTop="8dp"

        android:text="@string/search_card_info"/>


    <TextView
        android:id="@+id/title_scheme_network"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gl_center"
        app:layout_constraintTop_toBottomOf="@+id/b_load_data"
        android:layout_marginTop="8dp"

        android:text="@string/scheme_network"
        android:textSize="12sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_scheme_network"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/title_scheme_network"
        app:layout_constraintEnd_toEndOf="@+id/title_scheme_network"
        app:layout_constraintTop_toBottomOf="@+id/title_scheme_network"
        android:layout_marginTop="8dp"

        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"/>


    <TextView
        android:id="@+id/title_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gl_center"
        app:layout_constraintTop_toBottomOf="@+id/text_scheme_network"
        android:layout_marginTop="16dp"

        android:text="@string/brand"
        android:textSize="12sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/title_brand"
        app:layout_constraintEnd_toEndOf="@+id/title_brand"
        app:layout_constraintTop_toBottomOf="@+id/title_brand"
        android:layout_marginTop="8dp"

        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"/>


    <TextView
        android:id="@+id/title_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gl_center"
        app:layout_constraintTop_toBottomOf="@+id/text_brand"
        android:layout_marginTop="16dp"

        android:text="@string/card_number"
        android:textSize="12sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/title_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/title_luhn"
        app:layout_constraintTop_toBottomOf="@+id/title_card_number"

        android:text="@string/length"
        android:textSize="8sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/title_luhn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@+id/title_length"
        app:layout_constraintEnd_toEndOf="@+id/gl_center"
        app:layout_constraintTop_toBottomOf="@+id/title_card_number"

        android:text="@string/luhn"
        android:textSize="8sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/title_length"
        app:layout_constraintEnd_toEndOf="@+id/title_length"
        app:layout_constraintTop_toBottomOf="@+id/title_length"
        android:layout_marginTop="4dp"

        android:gravity="center"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/text_luhn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/title_luhn"
        app:layout_constraintEnd_toEndOf="@+id/title_luhn"
        app:layout_constraintTop_toBottomOf="@+id/title_luhn"
        android:layout_marginTop="4dp"

        android:gravity="center"
        android:textSize="12sp"/>


    <TextView
        android:id="@+id/title_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/gl_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_load_data"
        android:layout_marginTop="8dp"

        android:text="@string/type"
        android:textSize="12sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/title_type"
        app:layout_constraintEnd_toEndOf="@+id/title_type"
        app:layout_constraintTop_toBottomOf="@+id/title_type"
        android:layout_marginTop="8dp"

        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"/>


    <TextView
        android:id="@+id/title_prepaid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/gl_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_type"
        android:layout_marginTop="16dp"

        android:text="@string/prepaid"
        android:textSize="12sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_prepaid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/title_prepaid"
        app:layout_constraintEnd_toEndOf="@+id/title_prepaid"
        app:layout_constraintTop_toBottomOf="@+id/title_prepaid"
        android:layout_marginTop="8dp"

        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"/>


    <TextView
        android:id="@+id/title_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/gl_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_prepaid"
        android:layout_marginTop="16dp"

        android:text="@string/country"
        android:textSize="12sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_alpha_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/gl_center"
        app:layout_constraintEnd_toStartOf="@+id/text_numeric"
        app:layout_constraintTop_toBottomOf="@+id/title_country"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"

        android:textSize="10sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_country_name" />

    <TextView
        android:id="@+id/text_numeric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/text_alpha_two"
        app:layout_constraintEnd_toStartOf="@+id/text_country_name"
        app:layout_constraintTop_toBottomOf="@+id/title_country"
        android:layout_marginTop="8dp"

        android:textSize="10sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_country_name" />

    <TextView
        android:id="@+id/text_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/text_alpha_two"
        app:layout_constraintEnd_toEndOf="@+id/text_numeric"
        app:layout_constraintTop_toBottomOf="@+id/text_alpha_two"

        android:textSize="10sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_country_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@+id/text_numeric"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_country"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"

        android:textSize="12sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/text_latitude_longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/text_country_name"
        app:layout_constraintTop_toBottomOf="@+id/text_country_name"
        app:layout_constraintEnd_toEndOf="@id/text_country_name"

        android:textSize="10sp"
        android:gravity="center"
        tools:text="dfgdfgd" />


    <TextView
        android:id="@+id/title_bank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_latitude_longitude"
        android:layout_marginTop="16dp"

        android:text="@string/bank"
        android:textSize="12sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_bank_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/title_bank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bank"
        android:layout_marginTop="8dp"

        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"
        tools:text="fgfgdfgd" />

    <TextView
        android:id="@+id/text_bank_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/title_bank"
        app:layout_constraintEnd_toEndOf="@+id/title_bank"
        app:layout_constraintTop_toBottomOf="@+id/text_bank_name"
        android:layout_marginTop="8dp"

        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"
        tools:text="fgfgdfgd"/>

    <TextView
        android:id="@+id/text_bank_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/title_bank"
        app:layout_constraintEnd_toEndOf="@+id/title_bank"
        app:layout_constraintTop_toBottomOf="@+id/text_bank_city"
        android:layout_marginTop="8dp"

        android:autoLink="web"
        android:linksClickable="true"

        android:textSize="12sp"
        android:gravity="center"
        tools:text="fgfgdfgd"/>

    <TextView
        android:id="@+id/text_bank_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/title_bank"
        app:layout_constraintEnd_toEndOf="@+id/title_bank"
        app:layout_constraintTop_toBottomOf="@+id/text_bank_url"
        android:layout_marginTop="8dp"

        android:autoLink="phone"

        android:textSize="12sp"
        android:gravity="center"
        tools:text="fgfgdfgd"/>

</androidx.constraintlayout.widget.ConstraintLayout>